--- a/member/templates/member/register.html
+++ b/member/templates/member/register.html
@@ -7,14 +7,14 @@
     <title>the recipe hub registration page</title>
 </head>
 <body>
-    <h1>the recipe hub registration page</h1>
+    <h1 id="register-heading">the recipe hub registration page</h1>
     {% block content %}
     <div class="start-pages">
         <p class="fs-4">Register here to join our community.</p>
-        <form action="/member/register/" method="post">
+        <form action="/member/register/" method="post" role="form" aria-labelledby="register-heading">
             {% csrf_token %}
             {{ form.as_p }}
-            <button class="btn btn-primary">Submit</button>
+            <button class="btn btn-primary" aria-label="Submit Registration Form">Submit</button>
         </form>
     </div>
     {% endblock %}
