--- a/recipe/templates/recipe/delete_recipe.html
+++ b/recipe/templates/recipe/delete_recipe.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %} {% block content %}
-<h2>Are you sure you want to delete "{{ recipe.title }}"?</h2>
-
-<form method="POST">
-  {% csrf_token %}
-  <button type="submit">Yes, Delete</button>
-</form>
-
-<a href="{% url 'recipe:recipe_detail' recipe.slug %}">Cancel</a>
-{% endblock %}
+<!-- Accessible Delete Confirmation -->
+<div role="alertdialog" aria-labelledby="delete-heading" aria-describedby="delete-description">
+  <h2 id="delete-heading">Are you sure you want to delete "{{ recipe.title }}"?</h2>
+  <p id="delete-description">This action cannot be undone.</p>
+  <form method="POST">
+    {% csrf_token %}
+    <button type="submit" aria-label="Confirm recipe deletion">Yes, Delete</button>
+  </form>
+  <a href="{% url 'recipe:recipe_detail' recipe.slug %}" aria-label="Cancel and return to recipe">Cancel</a>
+  {% endblock %}
