--- a/recipe/templates/recipe/index.html
+++ b/recipe/templates/recipe/index.html
@@ -1,17 +1,18 @@
-{% extends "base.html" %} {% load static %} {% block message %} {% endblock message %} {% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 mt-2">
       <div class="row">
         {% for recipe in recipe_list %}
-        <div class="col-lg-3 col-md-6">
+        <div class="col-xl-3 col-md-6">
           <div class="card mb-4">
             {% if "placeholder" in recipe.featured_image.url %}
-              <img class="card-img-top img-fluid w-100" style="height: 220px; object-fit: cover"
+            <img class="card-img-top img-fluid w-100" style="height: 220px; object-fit: cover"
               src="{% static 'images/default.jpg' %}" alt="placeholder image" />
             {% else %}
-              <img class="card-img-top img-fluid w-100" style="height: 220px; object-fit: cover"
-              src=" {{ recipe.featured_image.url }}" alt="{{ recipe.title }}" />
+            <img class="card-img-top img-fluid w-100" style="height: 220px; object-fit: cover"
+              src=" {{ recipe.featured_image.url }}" alt="{{ recipe.title }}"
+              aria-describedby="recipe-title-{{ forloop.counter }}" />
             {% endif %}
             <div class="card-body pt-2">
               <div class="title-container mb-2" style="height:64px">
@@ -20,7 +21,7 @@
               <p class="author text-muted">Author: {{ recipe.author }}</p>
               <hr />
               <p class="card-text small text-muted">{{ recipe.created_on}}</p>
-              <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="stretched-link"></a>
+              <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="stretched-link" aria-hidden="true"></a>
             </div>
           </div>
         </div>
@@ -34,12 +35,13 @@
     <ul class="pagination justify-content-center">
       {% if page_obj.has_previous %}
       <li>
-        <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV
+        <a href="?page={{ page_obj.previous_page_number }}" class="page-link" aria-label="Go to previous page">&laquo;
+          PREV
         </a>
       </li>
       {% endif %} {% if page_obj.has_next %}
       <li>
-        <a href="?page={{ page_obj.next_page_number }}" class="page-link">
+        <a href="?page={{ page_obj.next_page_number }}" class="page-link" aria-label="Go to next page">
           NEXT &raquo;</a>
       </li>
       {% endif %}
