--- a/recipe/templates/recipe/member_recipes.html
+++ b/recipe/templates/recipe/member_recipes.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>My Recipes</h2>
 {% if member_list %}
-<div class="container-fluid">
+<div class="container-fluid" role="region" aria-labelledby="my-recipes-heading">
   <div class="row">
     <div class="col-12 mt-2">
       <div class="row">
@@ -11,41 +11,47 @@
         <div class="col-lg-3 col-md-6">
           <div class="card mb-4">
             {% if "placeholder" in recipe.featured_image.url %}
-              <img class="img-fluid w-100" style="height: 220px; object-fit: cover"
-                src="{% static 'images/default.jpg' %}" alt="placeholder image" />
-              {% else %}
-              <img class="img-fluid w-100" style="height: 220px; object-fit: cover"
-                src=" {{ recipe.featured_image.url }}" alt="{{ recipe.title }}" />
-              {% endif %}
+            <img class="img-fluid w-100" style="height: 220px; object-fit: cover"
+              src="{% static 'images/default.jpg' %}" alt="placeholder image" />
+            {% else %}
+            <img class="img-fluid w-100" style="height: 220px; object-fit: cover" src=" {{ recipe.featured_image.url }}"
+              alt="{{ recipe.title }}" />
+            {% endif %}
             <div class="card-body pt-3">
               <div class="title-container mb-2">
-              <h2 class="card-title fs-5" style="height:64px">{{ recipe.title }}</h2>
+                <h2 class="card-title fs-5" style="height:64px">{{ recipe.title }}</h2>
               </div>
               <p class="author text-muted">Author: {{ recipe.author }}</p>
               <hr />
               <p class="card-text small text-muted">{{ recipe.created_on}}</p>
-              <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="stretched-link"></a>
+              <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="stretched-link" aria-hidden="true"></a>
+              <!-- Show message to member if their recipe is not approved yet -->
+              {% if not recipe.approved %}
+              <p class="approval fw-semibold ps-3" aria-live="polite"> This recipe is not yet approved.</p>
+              {% endif %}
             </div>
           </div>
         </div>
-      {% if forloop.counter|divisibleby:4 %}
+        {% if forloop.counter|divisibleby:4 %}
+      </div>
+      <div class="row">{% endif %} {% endfor %}</div>
     </div>
-    <div class="row">{% endif %} {% endfor %}</div>
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+        <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link"
+            aria-label="Go to previous page">&laquo; PREV </a></li>
+        {% endif %}
+        {% if page_obj.has_next %}
+        <li><a href="?page={{ page_obj.next_page_number }}" class="page-link" aria-label="Go to next page"> NEXT
+            &raquo;</a></li>
+        {% endif %}
+      </ul>
+    </nav>
+    {% endif %}
+    {% else %}
+    <p>You haven't submitted any recipes yet.</p>
+    {% endif %}
   </div>
-{% if is_paginated %}
-<nav aria-label="Page navigation">
-  <ul class="pagination justify-content-center">
-    {% if page_obj.has_previous %}
-    <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-    {% endif %}
-    {% if page_obj.has_next %}
-    <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-    {% endif %}
-  </ul>
-</nav>
-{% endif %}
-{% else %}
-  <p>You haven't submitted any recipes yet.</p>
-{% endif %}
-</div>
-{% endblock %}
+  {% endblock %}
