--- a/recipe/templates/recipe/recipe_detail.html
+++ b/recipe/templates/recipe/recipe_detail.html
@@ -1,21 +1,13 @@
 {% extends 'base.html' %} {% load static %}
 {% block content %}
-<div class="container">
-  <div class="d-md block col-md-6">
+<div class="container" role="region" aria-labelledby="recipe-title">
+  <div class="d-md block col-lg-6">
     {% if "placeholder" in recipe.featured_image.url %}
-    <img
-      class="img-fluid scale"
-      src="{% static 'images/default.jpg' %}"
-      style="max-width: 70%; height: auto"
-      alt="placeholder image"
-    />
+    <img class="img-fluid scale" src="{% static 'images/default.jpg' %}" style="max-width: 100%; height: auto"
+      alt="placeholder image" aria-describedby="recipe-title" />
     {% else %}
-    <img
-      class="img-fluid scale"
-      src=" {{ recipe.featured_image.url }}"
-      style="max-width: 70%; height: auto"
-      alt="featured image"
-    />
+    <img class="img-fluid scale" src=" {{ recipe.featured_image.url }}" style="max-width: 100%; height: auto"
+      alt="featured image" aria-describedby="recipe-title" />
     {% endif %}
   </div>
   <h1 class="recipe-title fs-2">{{ recipe.title }}</h1>
@@ -24,12 +16,20 @@
   </p>
   {% if user == recipe.author %}
   <div class="d-flex mb-2">
-    <a href="{% url 'recipe:edit_recipe' recipe.slug %}" class="link me-3">Edit This Recipe</a>
-    <a href="{% url 'recipe:delete_recipe' recipe.slug %}" class="link">Delete This Recipe</a>
+    <a href="{% url 'recipe:edit_recipe' recipe.slug %}" class="link me-3" aria-label="Edit {{ recipe.title }}">Edit
+      This
+      Recipe</a>
+    <a href="{% url 'recipe:delete_recipe' recipe.slug %}" class="link" aria-label="Delete {{ recipe.title }}">Delete
+      This
+      Recipe</a>
+    {% endif %}
+    <!-- Show message to member if their recipe is not approved yet -->
+    {% if not recipe.approved %}
+    <p class="approval fw-semibold ps-3" aria-live="polite"> This recipe is not yet approved.</p>
+    {% endif %}
   </div>
-  {% endif %}
 </div>
-<div class="container mt-3">
+<div class="container mt-3" role="region" aria-labelledby="recipe-details">
   <div class="row">
     <div class="col card left top">
       <div class="card-body">
@@ -42,12 +42,14 @@
     </div>
   </div>
   <!-- Displaying Comments -->
-  <div class="row">
+  <div class="row" role="region" aria-labelledby="comments-section" aria-live="polite">
     <div class="col-md-8 card mb-4 mt-3">
       <h3 class="fs-4">Comments:</h3>
       <div class="card-body">
         {% for comment in comments %}
-        <div class="p-2 comments {% if not comment.approved and comment.author == user %} faded{% elif not comment.approved %} d-none{% endif %}">
+        <div
+          class="p-2 comments {% if not comment.approved and comment.author == user %} faded{% elif not comment.approved %} d-none{% endif %}"
+          role="article" aria-labelledby="comment{{ comment.id }}">
           <p class="font-weight-bold">
             {{ comment.author }}
             <span class="font-weight-normal"> {{ comment.created_on }} </span>
@@ -57,14 +59,13 @@
             {{ comment.body | linebreaks }}
           </div>
           {% if not comment.approved and comment.author == user %}
-          <p class="approval fst-italic">This comment is awaiting approval.</p>
-          {% endif %} 
+          <p class="approval fst-italic" aria-live="assertive">This comment is awaiting approval.</p>
+          {% endif %}
           {% if user.is_authenticated and comment.author == user %}
-            <button class="btn btn-delete btn-sm"
-              comment_id="{{ comment.id }}">Delete</button>
-            <button class="btn btn-edit btn-sm" comment_id="{{ comment.id }}">
-            Edit
-            </button>
+          <button class="btn btn-delete btn-sm" comment_id="{{ comment.id }}"
+            aria-label="Delete comment from {{ comment.author }}">Delete</button>
+          <button class="btn btn-edit btn-sm" comment_id="{{ comment.id }}"
+            aria-label="Edit comment from {{ comment.author }}">Edit</button>
           {% endif %}
         </div>
         {% endfor %}
@@ -76,9 +77,9 @@
         {% if user.is_authenticated %}
         <h3>Leave a comment:</h3>
         <p>Posting as: {{ user.username }}</p>
-        <form id="commentForm" method="post" style="margin-top: 1.3em">
+        <form id="commentForm" method="post" style="margin-top: 1.3em" role="form" aria-labelledby="commentFormTitle">
           {{ comment_form }} {% csrf_token %}
-          <button id="submitButton" type="submit" class="btn btn-primary mt-2">
+          <button id="submitButton" type="submit" class="btn btn-primary mt-2" aria-label="Submit comment">
             Submit
           </button>
         </form>
@@ -90,23 +91,19 @@
   </div>
 </div>
 <!-- Delete confirmation modal -->
-<div class="modal fade" id="deleteModal" tabindex="-1"
-  aria-labelledby="deleteModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title"
-          id="deleteModalLabel">Delete comment?</h5>
-        <button type="button" class="btn-close"
-          data-bs-dismiss="modal" aria-label="Close"></button>
+        <h5 class="modal-title" id="deleteModalLabel">Delete comment?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         Are you sure you want to delete your comment?
         This action cannot be undone.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-success"
-          data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-success" data-bs-dismiss="modal">Cancel</button>
         <a id="deleteConfirm" href="#" class="btn
           btn-danger">Delete</a>
       </div>
