--- a/recipe/templates/recipe/add_recipe.html
+++ b/recipe/templates/recipe/add_recipe.html
@@ -1,9 +1,4 @@
 {% extends "base.html" %}{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<title>Add Recipe</title>
-</head>
 {% block content %}
 <body>
   <h2 id="form-heading">Add a New Recipe</h2>
@@ -13,4 +8,4 @@
     <button type="submit" class="btn btn-primary" aria-label="Save and submit new recipe">Save Recipe</button>
   </form>
 </body>
-</html>{% endblock %}
+{% endblock %}
