--- a/recipe/templates/recipe/recipe_search.html
+++ b/recipe/templates/recipe/recipe_search.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% load static %}
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <h1 id="search-heading" class="fs-3">Search Results for: "{{ query }}"</h1>
 <div class="container">
   <div class="row">
@@ -10,31 +9,44 @@
         <div class="col-lg-3 col-md-6">
           <div class="card mb-4">
             {% if "placeholder" in recipe.featured_image.url %}
-            <img class="card-img-top img-fluid-w100" style="height: 220px; object-fit: cover"
-              src="{% static 'images/default.jpg' %}" alt="placeholder image" />
+            <img
+              class="card-img-top img-fluid-w100"
+              style="height: 220px; object-fit: cover"
+              src="{% static 'images/default.jpg' %}"
+              alt="placeholder image"
+            />
             {% else %}
-            <img class="card-img-top img-fluid-w100" style="height: 220px; object-fit: cover"
-              src=" {{ recipe.featured_image.url }}" alt="{{ recipe.title }}" />
+            <img
+              class="card-img-top img-fluid-w100"
+              style="height: 220px; object-fit: cover"
+              src=" {{ recipe.featured_image.url }}"
+              alt="{{ recipe.title }}"
+            />
             {% endif %}
             <div class="card-body pt-2">
-              <div class="title-container mb-2" style="height:64px">
+              <div class="title-container mb-2" style="height: 64px">
                 <h2 class="card-title fs-5">{{ recipe.title }}</h2>
               </div>
               <p class="author">Author: {{ recipe.author }}</p>
               <hr />
               <p class="card-text text-muted h6">{{ recipe.created_on}}</p>
               <!-- Accessible Link to Recipe Details -->
-              <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="stretched-link"
-                aria-label="View details for {{ recipe.title }}"></a>
+              <a
+                href="{% url 'recipe:recipe_detail' recipe.slug %}"
+                class="stretched-link"
+                aria-label="View details for {{ recipe.title }}"
+              ></a>
             </div>
           </div>
         </div>
         {% if forloop.counter|divisibleby:4 %}
       </div>
-      <div class="row">{% endif %}
-        {% empty %}
+      <div class="row">
+        {% endif %} {% empty %}
         <p>No recipes found.</p>
         {% endfor %}
       </div>
     </div>
     {% endblock content %}
+  </div>
+</div>
